test/visibility/private/uses/accessMulti1.good
accessMulti1.chpl:3: error: unresolved call 'b()'
accessMulti1.chpl:3: note: because no functions named b found in scope
